chore: sonar warnings fix